# curate

./: .gitignore  README.md  curate.py  pyproject.toml  requirements.txt
lib/: gertrude.py  music_file.py  types.py
src/: gen_data.py
src/Curate/: __init__.py  gen_data.py  server.py
src/Curate/lib/: database.py  gertrude.py  music_file.py
src/lib/: types.py
tests/: gertrude_10_test.py
