[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Curate"
authors = [{name = "Mark Hollomon"}]
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "peewee",
]

[project.scripts]
stm = "gen_data:main"
